--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,8 @@ dependencies:
   # firebase_core: ^2.24.2
   # firebase_auth: ^4.15.3
   # cloud_firestore: ^4.13.6
+  firebase_core: ^4.0.0
+  firebase_auth: ^6.0.1
 
 dev_dependencies:
   flutter_test:
