--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,12 +13,10 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.6
-  # Ready for Firebase integration
-  # firebase_core: ^2.24.2
-  # firebase_auth: ^4.15.3
-  # cloud_firestore: ^4.13.6
+
   firebase_core: ^4.0.0
   firebase_auth: ^6.0.1
+  cloud_firestore: ^6.0.0
 
 dev_dependencies:
   flutter_test:
